experimental/report/testdata/i18n.yaml.fancy.txt
error: emoji, CJK, bidi
  --> foo.proto:5:9
   |
 5 | message ğŸˆ<U+200D>â¬› {
   |         ^^^^^^^^^^^^
 6 |   string é»‘çŒ« = 1;
   |          ---- note: some surfaces render CJK as sub-two-column
   |
  ::: bar.proto:1:9
   |
 1 | import "×—×ª×•×œ ×©×—×•×¨.proto";
   |         --------------- bidi works if it's quoted, at least

error: bidi (Arabic, Hebrew, Farsi, etc) is broken in some contexts
  --> foo.proto:7:10
   |
 7 |   string Ø§Ù„Ù‚Ø·Ø© Ø§Ù„Ø³ÙˆØ¯Ø§Ø¡ = 2;
   |          ^^^^^^^^

encountered 2 errors
